ssup2ket-store/base/debezium_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssup2ket-store-debezium-deployment
  labels:
    app: ssup2ket-store-debezium
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: ssup2ket-store-debezium
  template:
    metadata:
      labels:
        app: ssup2ket-store-debezium
    spec:
      volumes:
      - name: configmap
        configMap:
          name: ssup2ket-store-debezium-configmap
          defaultMode: 0744
      - name: secret
        secret:
          secretName: ssup2ket-store-debezium-secret
          defaultMode: 0744
      containers:
      - name: debezium-connector
        image: debezium/connect:1.6.2.Final
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /etc/debezium/connector.json
          name: secret
          subPath: connector.json
        - mountPath: /kafka/config/log4j.properties
          name: configmap
          subPath: log4j.properties
        livenessProbe:
          exec:
            command: ["/bin/sh", "-c", "! curl http://$(hostname):8083/connectors/ssup2ket-store/status 2>/dev/null | grep -q \"state\":\"FAILED\""]
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "sleep 30s && curl -XPOST -H 'Content-Type:application/json' http://$(hostname):8083/connectors/ -d@/etc/debezium/connector.json"]
