ssup2ket-store/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssup2ket-store-deployment
  labels:
    app: ssup2ket-store
spec:
  selector:
    matchLabels:
      app: ssup2ket-store
  template:
    metadata:
      labels:
        app: ssup2ket-store
    spec:
      containers:
      - name: ssup2ket-store
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: grpc
          containerPort: 9090
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 300
          periodSeconds: 10
        volumeMounts:
        - name: tz-seoul
          mountPath: /etc/localtime
      volumes:
        - name: tz-seoul
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
