ssup2ket-store/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ssup2ket-store-virtualservice
spec:
  hosts:
  - ssupket-store-service
  gateways:
  - ssup2ket-store-gateway
  http:
  - match:
    - uri:
        prefix: "/store/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: ssup2ket-store-service
  - match:
    - port: 9101
    route:
    - destination:
        host: ssup2ket-store-service
